--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,9 +25,22 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/docs" # the subpath of your site, e.g. /blog
 github_username:  zagd3m
 
+# User defined
 domain: zagd3m.github.io/
 url: https://zagd3m.github.io
 baseurl: /patchnotes
+
+# Github not modifiable
+lsi: false
+safe: true
+source: /docs
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
 
 # Build settings
 theme: jekyll-theme-minimal
