--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Zag3m PD2 imaginary patch notes
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   An awesome description.
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+# baseurl: "/docs" # the subpath of your site, e.g. /blog
 github_username:  zagd3m
 
 # User defined
@@ -33,7 +33,6 @@ baseurl: /patchnotes
 # Github not modifiable
 lsi: false
 safe: true
-source: /docs
 incremental: false
 highlighter: rouge
 gist:
