--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -45,6 +45,17 @@ kramdown:
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
+  - jekyll-titles-from-headings
+  - jekyll-relative-links
+
+titles_from_headings:
+  enabled:     true
+  strip_title: false
+  collections: false
+
+relative_links:
+  enabled:     true
+  collections: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
