--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -48,6 +48,10 @@ plugins:
   - jekyll-titles-from-headings
   - jekyll-relative-links
 
+sass:
+  sass_dir: _sass
+  style: compressed
+
 titles_from_headings:
   enabled:     true
   strip_title: false
