--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -1,5 +1,7 @@
 - name: Home
   link: /patchnotes/
+- name: Game Design
+  link: /patchnotes/gamedesign
 - name: Full Patch Notes
   link: /patchnotes/full-notes
 - name: Sections
