--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -4,6 +4,8 @@ gem "github-pages", "~> 232", group: :jekyll_plugins
 
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
+  gem 'jekyll-seo-tag'
+  gem 'jekyll-google_search_console_verification_file'
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
