--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,6 +40,7 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+  toc_levels: 1..2
 
 # Build settings
 theme: jekyll-theme-minimal
