--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,6 +37,13 @@ incremental: false
 highlighter: rouge
 gist:
   noscript: false
+
+# Collections
+collections:
+  patchnotes:
+    output: true
+    permalink: /patchnotes/sections/:name/
+
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
