--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -3,9 +3,9 @@ source "https://rubygems.org"
 gem "github-pages", "~> 232", group: :jekyll_plugins
 
 group :jekyll_plugins do
-  gem "jekyll-feed", "~> 0.12"
-  gem 'jekyll-seo-tag'
-  gem 'jekyll-sitemap'
+  gem "jekyll-feed", "~> 0.17.0"
+  gem 'jekyll-seo-tag', '~> 2.8.0'
+  gem 'jekyll-sitemap', '~> 1.4.0'
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
